--- a/A06.-Programación lineal.ipynb
+++ b/A06.-Programación lineal.ipynb
@@ -74,46 +74,49 @@
    "id": "bfa75f4c-d14a-4e32-8772-fe2f1426abad",
    "metadata": {},
    "source": [
-    "**1.- Identificar criterio de optimización (Maximizaar las ganancias)**\n",
+    "**1.- Identificar criterio de optimización (Maximizar las ganancias)**\n",
     "\n",
     "**2.-¿Sabes que puedo influir?**\n",
-    "+ $$x_1 : Num. de Mesas$$\n",
-    "+ $$x_2 : Num. de Sillas$$\n",
-    "+ $$x_3 : Num. de Libreros$$\n",
-    "+ $$x_4 : Num. de Bases de cama$$\n",
+    "+ $$x_{ME} : Num. de Mesas$$\n",
+    "+ $$x_{SE} : Num. de Sillas$$\n",
+    "+ $$x_{LE} : Num. de Libreros$$\n",
+    "+ $$x_{BE} : Num. de Bases de cama$$\n",
+    "+ $$x_{MA} : Num. de Mesas, APRENDIZ$$\n",
+    "+ $$x_{SA} : Num. de Sillas, APRENDIZ$$\n",
+    "+ $$x_{LA} : Num. de Libreros, APRENDIZ$$\n",
+    "+ $$x_{BA} : Num. de Bases de cama, APRENDIZ$$\n",
     "\n",
     "\n",
-    "\n",
-    "**3.-f(x1,x2,x3,x4)** $$Maximizar =9000x_1 + 3000x_2 + 10000x_3 + 9000x_4$$\n",
+    "**3.-f(xME,xSE,xLE,xBE,xMA,xSA,xLA,xBA)** $$Maximizar =9000x_{ME} + 3000x_{SE} + 10000x_{LE} + 9000x_{BE} + 9000x_{MA} + 3000x_{SA} + 10000x_{LA} + 9000x_{BA}$$\n",
     "\n",
     "\n",
     "**4.- Información adicional (restricciones)**\n",
     "\n",
     "**Trabajador experimentado**\n",
-    "+ $$Mesas: 3x_1 hrs$$\n",
-    "+ $$Sillas: x_2 hrs$$\n",
-    "+ $$Libreros: 4x_3 hrs$$\n",
-    "+ $$Bases de cama: 3x_4 hrs$$\n",
+    "+ $$Mesas: 3x_{ME} hrs$$\n",
+    "+ $$Sillas: x_{SE} hrs$$\n",
+    "+ $$Libreros: 4x_{LE} hrs$$\n",
+    "+ $$Bases de cama: 3x_{BE} hrs$$\n",
     "**Tiempo total $$\\leq 40$$**\n",
     "\n",
-    "+ $$Mesas: 6x_1 unidades$$\n",
-    "+ $$Sillas: 2x_2 unidades $$\n",
-    "+ $$Libreros : 5x_3 unidades$$\n",
-    "+ $$Bases de cama : 5x_4 unidades$$\n",
+    "+ $$Mesas: 6x_{ME} unidades$$\n",
+    "+ $$Sillas: 2x_{SE} unidades $$\n",
+    "+ $$Libreros : 5x_{LE} unidades$$\n",
+    "+ $$Bases de cama : 5x_{BE} unidades$$\n",
     "**Unidades totales $$\\leq 100$$**\n",
     "\n",
     "**Aprendiz (50% mas)**\n",
-    "+ $$Mesas: 4.5x_1 hrs$$\n",
-    "+ $$Sillas: 1.5x_2 hrs$$\n",
-    "+ $$Libreros: 6x_3 hrs$$\n",
-    "+ $$Bases de cama: 4.5x_4 hrs$$\n",
+    "+ $$Mesas: 4.5x_{MA} hrs$$\n",
+    "+ $$Sillas: 1.5x_{SA} hrs$$\n",
+    "+ $$Libreros: 6x_{LA} hrs$$\n",
+    "+ $$Bases de cama: 4.5x_{BA} hrs$$\n",
     "**Tiempo total $$\\leq 40$$**\n",
     "  \n",
     "**Aprendiz (20% mas)**\n",
-    "+ $$Mesas: 7.2x_1 unidades$$\n",
-    "+ $$Sillas: 2.4x_2 unidades $$\n",
-    "+ $$Libreros : 6x_3 unidades$$\n",
-    "+ $$Bases de cama : 6x_4 unidades$$\n",
+    "+ $$Mesas: 7.2x_{MA} unidades$$\n",
+    "+ $$Sillas: 2.4x_{SA} unidades $$\n",
+    "+ $$Libreros : 6x_{LA} unidades$$\n",
+    "+ $$Bases de cama : 6x_{BA} unidades$$\n",
     "**Unidades totales $$\\leq 100$$**\n",
     "  \n",
     "  "
@@ -124,10 +127,123 @@
    "id": "b6f97734-7d54-4709-a94a-9034aebb9cec",
    "metadata": {},
    "source": [
-    "$$ 3x_1 + x_2 + 4x_3 + 3x_2 \\leq 40$$\n",
-    "$$ 4.5x_1 + 1.5x_2 + 6x_3 + 4x_2 \\leq 40$$\n",
-    "$$ 6x_1 + 2x_2 + 5x_3 + 5x_2 \\leq 100$$\n",
-    "$$ 7.2x_1 + 2.4x_2 + 6x_3 + 6x_2 \\leq 100$$"
+    "$$ 3x_{ME} + x_{SE} + 4x_{LE} + 3x_{BE} \\leq 40$$\n",
+    "$$ 4.5x_{MA} + 1.5x_{SA} + 6x_{LA} + 4x_{BA} \\leq 40$$\n",
+    "$$ 6x_{ME} + 2x_{SE} + 5x_{LE} + 5x_{BE} + 7.2x_{MA} + 2.4x_{SA} + 6x_{LA} + 6x_{BA} \\leq 100$$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "ae969e64-abb8-452c-8520-5372478bf3fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Problema #1\n",
+      "el ingreso total es: 176000.0\n",
+      "las horas trabajadas por el experto son:  40.0\n",
+      "las horas trabajadas por el aprendiz son:  39.0\n",
+      "las unidades usadas son:  100.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "c = np.array([\n",
+    "    -9000,\n",
+    "    -3000,\n",
+    "    -10000,\n",
+    "    -9000,\n",
+    "    -9000,\n",
+    "    -3000,\n",
+    "    -10000,\n",
+    "    -9000,\n",
+    "\n",
+    "])\n",
+    "\n",
+    "aub = np.array([\n",
+    "    [3,1,4,3,0,0,0,0],\n",
+    "    [6,2,5,5,7.2,2.4,6,6],\n",
+    "    [0,0,0,0,4.5,1.5,6,4.5],\n",
+    "    \n",
+    "])\n",
+    "\n",
+    "bub =np.array([\n",
+    "    40, \n",
+    "    100, \n",
+    "    40, \n",
+    "\n",
+    "])\n",
+    "\n",
+    "import scipy.optimize as opt\n",
+    "sol = opt.linprog(c, aub, bub,integrality=1)\n",
+    "print(\"Problema #1\")\n",
+    "print(\"el ingreso total es:\", sol.fun*-1)\n",
+    "print(\"las horas trabajadas por el experto son: \", np.dot(sol.x,[3,1,4,3,0,0,0,0]))\n",
+    "print(\"las horas trabajadas por el aprendiz son: \", np.dot(sol.x,[0,0,0,0,4.5,1.5,6,4.5]))\n",
+    "print(\"las unidades usadas son: \", np.dot(sol.x,[6,2,5,5,7.2,2.4,6,6]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "id": "81ed83fa-29ff-4eea-bb78-fe1bd09e7b26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Problema #2\n",
+      "el ingreso total es: 161000.0\n",
+      "las horas trabajadas por el experto son:  39.0\n",
+      "las horas trabajadas por el aprendiz son:  30.0\n",
+      "las unidades usadas son:  99.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "c = np.array([\n",
+    "    -9000,\n",
+    "    -3000,\n",
+    "    -10000,\n",
+    "    -9000,\n",
+    "    -9000,\n",
+    "    -3000,\n",
+    "    -10000,\n",
+    "    -9000,\n",
+    "])\n",
+    "\n",
+    "aub = np.array([\n",
+    "    [3,1,4,3,0,0,0,0],\n",
+    "    [6,2,5,5,7.2,2.4,6,6],\n",
+    "    [0,0,0,0,4.5,1.5,6,4.5],\n",
+    "    [-1,0,0,0,-1,0,0,0],\n",
+    "    [0,-1,0,0,0,-1,0,0],\n",
+    "    \n",
+    "])\n",
+    "\n",
+    "bub =np.array([\n",
+    "    40, \n",
+    "    100, \n",
+    "    40,\n",
+    "    -3,\n",
+    "    -18,\n",
+    "\n",
+    "])\n",
+    "\n",
+    "import scipy.optimize as opt\n",
+    "sol = opt.linprog(c, aub, bub,integrality=1)\n",
+    "sol\n",
+    "print(\"Problema #2\")\n",
+    "print(\"el ingreso total es:\", sol.fun*-1)\n",
+    "print(\"las horas trabajadas por el experto son: \", np.dot(sol.x,[3,1,4,3,0,0,0,0]))\n",
+    "print(\"las horas trabajadas por el aprendiz son: \", np.dot(sol.x,[0,0,0,0,4.5,1.5,6,4.5]))\n",
+    "print(\"las unidades usadas son: \", np.dot(sol.x,[6,2,5,5,7.2,2.4,6,6]))"
    ]
   }
  ],
