--- a/T08.-Distribuciones de probabilidad.ipynb
+++ b/T08.-Distribuciones de probabilidad.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c1f9facb-074d-4085-9492-14e206b08a74",
+   "metadata": {},
+   "source": [
+    "Diego Yael Islas Santoyo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "418c3a05-baf1-4c0f-8be6-3f61a1a67c57",
    "metadata": {},
    "source": [
@@ -277,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 8,
    "id": "a236c242-4c0a-412d-b31b-fe32692f55d2",
    "metadata": {},
    "outputs": [
@@ -285,7 +293,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cuántas veces se excedería el peso permitido: 45.67%\n"
+      "Cuántas veces se excedería el peso permitido: 44.78%\n"
      ]
     }
    ],
@@ -300,7 +308,7 @@
     "excedencias = 0\n",
     "\n",
     "for _ in range(N):\n",
-    "    grupo = np.random.choice([0, 1, 2], size=4, replace=True)\n",
+    "    grupo = np.random.choice([0, 1, 2], size=4, p=[0.4,0.5,0.1], replace=True)\n",
     "    \n",
     "    # Calcular el peso total basado en la selección\n",
     "    peso_total = sum(np.random.normal(loc=80, scale=16) if persona == 0 else\n",
@@ -327,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 12,
    "id": "6e394ea7-4755-475c-a8ea-53a39c53a3f3",
    "metadata": {},
    "outputs": [
@@ -335,7 +343,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El peso total que el elevador debería soportar para no exceder el límite el 95% de las veces es: 344.28 kg\n"
+      "El peso total que el elevador debería soportar para no exceder el límite el 95% de las veces es: 344.74 kg\n"
      ]
     }
    ],
@@ -350,7 +358,7 @@
     "pesos_totales = []\n",
     "\n",
     "for _ in range(N):\n",
-    "    grupo = np.random.choice([0, 1, 2], size=4, replace=True)\n",
+    "    grupo = np.random.choice([0, 1, 2], size=4,  p=[0.4,0.5,0.1], replace=True)\n",
     "    \n",
     "    peso_total = sum(np.random.normal(loc=80, scale=16) if persona == 0 else\n",
     "                     np.random.normal(loc=70, scale=11) if persona == 1 else\n",
