--- a/01 Problema del viajante.ipynb
+++ b/01 Problema del viajante.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d76090e0-e6ed-4b3a-ad35-951cb1621ca2",
+   "id": "40fa8480-baa0-4e9b-8dcb-c60eb5684057",
+   "metadata": {},
+   "source": [
+    "Diego Yael Islas Santoyo\n",
+    "\n",
+    "06/11/2024"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28696e23-4cf4-498b-8a74-14eb6ca68ccb",
    "metadata": {},
    "source": [
     "# Problema del viajante"
